--- a/src/style/eggs/wallpaper_egg.scss
+++ b/src/style/eggs/wallpaper_egg.scss
@@ -1,5 +1,5 @@
 .wallpaper-egg-found {
-  background-image: url(/public/buddy-bg.jpg);
+  background-image: url(buddy-bg.jpg);
   background-attachment: fixed;
   background-size: cover;
   background-position: left center;
