--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -8,6 +8,12 @@
   box-sizing: border-box;
 }
 
+button {
+  cursor: pointer;
+  font-family: inherit;
+  color: inherit;
+}
+
 html {
   font-family: Poppins;
   line-height: 1.6;
