--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -9,6 +9,8 @@
 }
 
 button {
+  border: 0;
+  background-color: transparent;
   cursor: pointer;
   font-family: inherit;
   color: inherit;
@@ -51,7 +53,7 @@ html {
 
 .primary-navigation-toggle {
   cursor: pointer;
-  display: block;
+  display: flex;
   margin-left: auto;
   padding: 0.25rem;
   aspect-ratio: 1;
@@ -85,9 +87,36 @@ html {
   }
 }
 
+.close-button > span {
+      background-color: transparent;
+
+      &::before {
+        width: 3rem;
+        top: 0;
+        transform: translateX(-50%) rotate(45deg);
+      }
+
+      &::after {
+        width: 3rem;
+        top: -100%;
+        transform: translateX(-50%) rotate(-45deg);
+      }
+}
+
+    .primary-navigation-close-background {
+      cursor: pointer;
+      position: absolute;
+      width: 100vw;
+      height: 100vh;
+      left: 0;
+      bottom: 0;
+      z-index: -2;
+    }
+
 .primary-navigation {
-  display: none;
-  justify-content: end;
+  width: 100%;
+  justify-content: center;
+  display: flex;
   position: absolute;
   inset: auto 0 0 auto;
   z-index: -2;
@@ -100,15 +129,17 @@ html {
     display: flex;
     flex-direction: column-reverse;
     gap: 1em;
-    width: max-content;
+    width: 100%;
   }
 
   > ul > li {
     display: flex;
     width: 100%;
   }
-
+  
   > ul > li > a {
+    width: 100%;
+    text-align: center;
     font-size: 1.25em;
     text-decoration: none;
     color: white;
@@ -142,44 +173,10 @@ html {
   opacity: 0;
 
   &:focus {
-    ~ .primary-navigation-toggle {
+    ~ button {
       outline: 1px solid dodgerblue;
       outline-offset: 0.5rem;
       border-radius: 0.5rem;
-    }
-  }
-
-  &:checked {
-    ~ .primary-navigation {
-      width: 100%;
-      display: flex;
-      justify-content: center;
-    }
-
-    ~ .primary-navigation-close {
-      cursor: pointer;
-      position: absolute;
-      width: 100vw;
-      height: 100vh;
-      left: 0;
-      bottom: 0;
-      z-index: -2;
-    }
-
-    ~ .primary-navigation-toggle > span {
-      background-color: transparent;
-
-      &::before {
-        width: 3rem;
-        top: 0;
-        transform: translateX(-50%) rotate(45deg);
-      }
-
-      &::after {
-        width: 3rem;
-        top: -100%;
-        transform: translateX(-50%) rotate(-45deg);
-      }
     }
   }
 }
